# waqi-python-client

./: .gitignore  README.md  pyproject.toml
src/waqi_python_client/: entities.py  waqi_api.py
tests/: waqi_api_test.py
